--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python
-backend/__pycache__/
-backend/*.py[cod]
-backend/*.pyo
+__pycache__/
+*.py[cod]
+*.pyo
 
 # Virtual environment
 backend/.venv/
